Move wardrobe lists to singleton list